[project]
name = "ci-lab-dylanjoy"
version = "0.1.0"
description = "A project for analyzing the penguin dataset with CI pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",  # Adjusted for stability
    "seaborn>=0.12.0",  # Ensure seaborn is included
    "pytest>=8.4.0",
]

[tool.uv]
lock = true
